orchestra-compiler/tests/invalid_task_no_device_id.mlir
// RUN: not %orchestra-opt %s --verify-diagnostics 2>&1 | %FileCheck %s

"orchestra.schedule"() ({
  // CHECK: error: 'orchestra.task' op requires an 'device_id' key in the 'target' dictionary
  "orchestra.task"() <{target = {arch = "cpu"}}> ({
    "orchestra.yield"() : () -> ()
  }) : () -> ()
  "orchestra.yield"() : () -> ()
}) : () -> ()
